data/derived/fa15/progs/unify/prog0512.ml.out
Characters 73-77:
  let fixpoint (f,b) = wwhile ((let f' x = let b' = f b in (b', b' = b) in f' 1), b);;
                                                                           ^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
